complete dataId and rename dataName in Download controller
